# ATOMICA

./: .gitmodules  ALPHAFOLD_INTEGRATION.md  README.md  embed_protein.py  get_embeddings.py  pdb_cli.py  pdb_converter.py  pdb_downloader.py  pyproject.toml  resolve_proteins.py
data/: README.md  dataset.py  process_pdbs.py
data/converter/: pdb_lig_to_blocks.py
data/example/: example_inputs.csv
data/example/example_data/: 2uxq.cif  3i5x.cif  5kl2.cif  6d1u.cif  6hrg.cif  6llw.cif
data/tokenizer/: molecule.py
docs/: EMBED_PROTEIN_USAGE.md  PDB_CONVERSION_USAGE.md  PDB_DOWNLOADER_README.md  ROCKY_LINUX_FIX.md  SYSTEM_DEPENDENCIES.md  downloads_README.md  igf1_structures_README.md
interaction_profiler/: README.md  __init__.py  interact_score.py  preparation.py
models/: pretrain_model.py
models/ATOMICA/: utils.py
tutorials/atomica_ligand/: example_run_atomica_ligand.ipynb
tutorials/atomica_net/: example_atomica_net.ipynb
