[project]
name = "atomica"
version = "0.1.2"
description = "ATOMICA: A deep learning model for molecular structure prediction"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=2.0,<2.4",
    "torch>=2.1.1,<2.6",
    "torch-scatter>=2.1.2",
    "torch-cluster>=1.6.3",
    "tensorboard>=2.18.0,<2.21",
    "e3nn>=0.5.1,<0.6",
    "scipy>=1.13.1,<1.17",
    "rdkit>=2023.9.5",
    "openbabel-wheel>=3.1.1.20",
    "biopython>=1.84,<1.86",
    "biotite>=1.5.0,<2.0",
    "atom3d>=0.2.6",
    "wandb>=0.18.2,<0.23",
    "orjson>=3.9.0,<4.0",
    "umap-learn>=0.5.3,<0.6",
    "matplotlib>=3.8.0,<3.11",
    "seaborn>=0.13.0,<0.14",
    "plotly>=5.17.0,<7.0",
    "typer>=0.19.2,<1.0",
    "eliot>=1.17.5,<2.0",
    "requests>=2.31.0,<2.34",
    "polars>=1.34.0,<2.0",
    "pycomfort>=0.0.18,<0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[project.scripts]
embed = "get_embeddings:app"
interact-score = "interaction_profiler.interact_score:app"
pdb = "pdb_cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "data", "trainers", "utils", "interaction_profiler"]

[tool.uv]
preview = true
# PyTorch Geometric wheels for torch-scatter and torch-cluster
# Using CUDA 12.1 wheels which are compatible with CUDA 12.6
find-links = ["https://data.pyg.org/whl/torch-2.5.1+cu121.html"]
no-build-package = ["torch-scatter", "torch-cluster"]

[tool.uv.sources]
# Only torch uses CUDA 12.1 specific index
# torch-scatter and torch-cluster come from find-links
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

